# SolanaNodeToolkit

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
examples/: setup_validator.md
scripts/: deploy_node.py
src/: main.rs
