[package]
name = "solana-node-toolkit"
version = "0.1.0"
edition = "2021"
description = "A toolkit for Solana node operators"
license = "MIT"
repository = "https://github.com/yourusername/SolanaNodeToolkit"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
clap = { version = "4.5", features = ["derive"] } # CLI parsing
prometheus = "0.13" # Metrics export
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] } # Async runtime

[dev-dependencies]
assert_cmd = "2.0"
